adding some divs

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <div class="maincontainer">
-      <h1>
+      <div class="title">
       10,000+ of our users love our products.
-    </h1>
+    </div>
       We only provide great products
       combined with excellent customer service. See what our satisfied customers
       are saying about our services. Rated 5 Stars in Reviews Rated 5 Stars in
