--- a/index.html
+++ b/index.html
@@ -66,14 +66,49 @@
         <p class="rated">Rated 5 Stars in BestTech</p>
       </div>
 
-      Colton Smith Verified Buyer "We needed the same printed design as the one
+      <div class="comments">
+        <div class="details">
+          <img src="images/image-colton.jpg" class="profpic">
+          <div class="cgroup">
+      <p class="name">Colton Smith</p>
+       <p class = "status">Verified Buyer </p> 
+      </div>
+      </div>
+      <div class="usercomment">
+       "We needed the same printed design as the one
       we had ordered a week prior. Not only did they find the original order,
-      but we also received it in time. Excellent!" Irene Roberts Verified Buyer
+      but we also received it in time. Excellent!"
+    </div>
+    </div>
+
+    <div class="comments">
+      <div class="details">
+        <img src="images/image-irene.jpg" class="profpic">
+        <div class="cgroup">
+      <p class="name">Irene Roberts</p>
+       <p class="status">Verified Buyer</p>
+      </div>
+      </div>
+      <div class="usercomment">
       "Customer service is always excellent and very quick turn around.
       Completely delighted with the simplicity of the purchase and the speed of
-      delivery." Anne Wallace Verified Buyer "Put an order with this company and
-      can only praise them for the very high standard. Will definitely use them
-      again and recommend them to everyone!"
+      delivery."
+    </div>
+    </div>
+    <div class="comments">
+      <div class="details">
+        <img src="images/image-colton.jpg" class="profpic">
+        <div class="cgroup">
+       <p class="name"> Anne Wallace</p>
+        <p class="status">Verified Buyer </p>
+        </div>
+      </div>
+      <div class="usercomment">
+   "Put an order with this company and
+    can only praise them for the very high standard. Will definitely use them
+    again and recommend them to everyone!"
+  </div>
+  </div>
     </div>
     <!-- <div class="attribution">
       Challenge by
