--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <div class="maincontainer">
+      <div class="deskcontainer">
+        <div class="desrate">
       <div class="title">10,000+ of our users love our products.</div>
       <p class="description">
         We only provide great products combined with excellent customer service.
@@ -65,6 +67,7 @@
         </div>
         <p class="rated">Rated 5 Stars in BestTech</p>
       </div>
+    </div>
 
       <div class="comments">
         <div class="details">
@@ -109,7 +112,9 @@
     again and recommend them to everyone!"
   </div>
   </div>
+</div>
     </div>
+    
     <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
