--- a/index.html
+++ b/index.html
@@ -29,92 +29,97 @@
   <body>
     <div class="maincontainer">
       <div class="deskcontainer">
-        <div class="desrate">
-      <div class="title">10,000+ of our users love our products.</div>
-      <p class="description">
-        We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.
-      </p>
-      <div class="ratings">
-        <div>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-        </div>
-        <p class="rated">Rated 5 Stars in Reviews</p>
-      </div>
+        <div class="flexgroup">
+          <div class="titleg">
+            <div class="title">10,000+ of our users love our products.</div>
+            <p class="description">
+              We only provide great products combined with excellent customer
+              service. See what our satisfied customers are saying about our
+              services.
+            </p>
+          </div>
+          <div class="rategroup">
+            <div class="ratings">
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+              <p class="rated">Rated 5 Stars in Reviews</p>
+            </div>
 
-      <div class="ratings">
-        <div>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-        </div>
-        <p class="rated">Rated 5 Stars in Report Guru</p>
-      </div>
+            <div class="ratings">
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+              <p class="rated">Rated 5 Stars in Report Guru</p>
+            </div>
 
-      <div class="ratings">
-        <div>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
+            <div class="ratings">
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+              <p class="rated">Rated 5 Stars in BestTech</p>
+            </div>
+          </div>
         </div>
-        <p class="rated">Rated 5 Stars in BestTech</p>
+
+        <div class="comments">
+          <div class="details">
+            <img src="images/image-colton.jpg" class="profpic" />
+            <div class="cgroup">
+              <p class="name">Colton Smith</p>
+              <p class="status">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="usercomment">
+            "We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent!"
+          </div>
+        </div>
+
+        <div class="comments">
+          <div class="details">
+            <img src="images/image-irene.jpg" class="profpic" />
+            <div class="cgroup">
+              <p class="name">Irene Roberts</p>
+              <p class="status">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="usercomment">
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </div>
+        </div>
+        <div class="comments">
+          <div class="details">
+            <img src="images/image-colton.jpg" class="profpic" />
+            <div class="cgroup">
+              <p class="name">Anne Wallace</p>
+              <p class="status">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="usercomment">
+            "Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+          </div>
+        </div>
       </div>
     </div>
 
-      <div class="comments">
-        <div class="details">
-          <img src="images/image-colton.jpg" class="profpic">
-          <div class="cgroup">
-      <p class="name">Colton Smith</p>
-       <p class = "status">Verified Buyer </p> 
-      </div>
-      </div>
-      <div class="usercomment">
-       "We needed the same printed design as the one
-      we had ordered a week prior. Not only did they find the original order,
-      but we also received it in time. Excellent!"
-    </div>
-    </div>
-
-    <div class="comments">
-      <div class="details">
-        <img src="images/image-irene.jpg" class="profpic">
-        <div class="cgroup">
-      <p class="name">Irene Roberts</p>
-       <p class="status">Verified Buyer</p>
-      </div>
-      </div>
-      <div class="usercomment">
-      "Customer service is always excellent and very quick turn around.
-      Completely delighted with the simplicity of the purchase and the speed of
-      delivery."
-    </div>
-    </div>
-    <div class="comments">
-      <div class="details">
-        <img src="images/image-colton.jpg" class="profpic">
-        <div class="cgroup">
-       <p class="name"> Anne Wallace</p>
-        <p class="status">Verified Buyer </p>
-        </div>
-      </div>
-      <div class="usercomment">
-   "Put an order with this company and
-    can only praise them for the very high standard. Will definitely use them
-    again and recommend them to everyone!"
-  </div>
-  </div>
-</div>
-    </div>
-    
     <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
