Adding ALT to images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="comments">
           <div class="details">
-            <img src="images/image-colton.jpg" class="profpic" />
+            <img src="images/image-colton.jpg" class="profpic" alt="Colton Prof Pic" />
             <div class="cgroup">
               <p class="name">Colton Smith</p>
               <p class="status">Verified Buyer</p>
@@ -91,7 +91,7 @@
 
         <div class="comments">
           <div class="details">
-            <img src="images/image-irene.jpg" class="profpic" />
+            <img src="images/image-irene.jpg" class="profpic" alt="Irene Prof Pic" />
             <div class="cgroup">
               <p class="name">Irene Roberts</p>
               <p class="status">Verified Buyer</p>
@@ -105,7 +105,7 @@
         </div>
         <div class="comments">
           <div class="details">
-            <img src="images/image-colton.jpg" class="profpic" />
+            <img src="images/image-colton.jpg" class="profpic" alt="Anne Prof Pic" />
             <div class="cgroup">
               <p class="name">Anne Wallace</p>
               <p class="status">Verified Buyer</p>
