Just rearranging tags

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
           </div>
           <div class="rategroup">
-            <div class="ratings">
+            <div class="ratings r1">
               <div>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -50,7 +50,7 @@
               <p class="rated">Rated 5 Stars in Reviews</p>
             </div>
 
-            <div class="ratings">
+            <div class="ratings r2">
               <div>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -61,7 +61,7 @@
               <p class="rated">Rated 5 Stars in Report Guru</p>
             </div>
 
-            <div class="ratings">
+            <div class="ratings r3">
               <div>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
