add classes for some of elements

--- a/index.html
+++ b/index.html
@@ -73,48 +73,61 @@
             </div>
           </div>
         </div>
+        <div class="flexcontainer">
+          <div class="comments c1">
+            <div class="details">
+              <img
+                src="images/image-colton.jpg"
+                class="profpic"
+                alt="Colton Prof Pic"
+              />
+              <div class="cgroup">
+                <p class="name">Colton Smith</p>
+                <p class="status">Verified Buyer</p>
+              </div>
+            </div>
+            <div class="usercomment c1">
+              " We needed the same printed design as the one we had ordered a
+              week prior. Not only did they find the original order, but we also
+              received it in time. Excellent! "
+            </div>
+          </div>
 
-        <div class="comments">
-          <div class="details">
-            <img src="images/image-colton.jpg" class="profpic" alt="Colton Prof Pic" />
-            <div class="cgroup">
-              <p class="name">Colton Smith</p>
-              <p class="status">Verified Buyer</p>
+          <div class="comments c2">
+            <div class="details">
+              <img
+                src="images/image-irene.jpg"
+                class="profpic"
+                alt="Irene Prof Pic"
+              />
+              <div class="cgroup">
+                <p class="name">Irene Roberts</p>
+                <p class="status">Verified Buyer</p>
+              </div>
+            </div>
+            <div class="usercomment">
+              " Customer service is always excellent and very quick turn around.
+              Completely delighted with the simplicity of the purchase and the
+              speed of delivery. "
             </div>
           </div>
-          <div class="usercomment">
-            "We needed the same printed design as the one we had ordered a week
-            prior. Not only did they find the original order, but we also
-            received it in time. Excellent!"
-          </div>
-        </div>
-
-        <div class="comments">
-          <div class="details">
-            <img src="images/image-irene.jpg" class="profpic" alt="Irene Prof Pic" />
-            <div class="cgroup">
-              <p class="name">Irene Roberts</p>
-              <p class="status">Verified Buyer</p>
+          <div class="comments c3">
+            <div class="details">
+              <img
+                src="images/image-anne.jpg"
+                class="profpic"
+                alt="Anne Prof Pic"
+              />
+              <div class="cgroup">
+                <p class="name">Anne Wallace</p>
+                <p class="status">Verified Buyer</p>
+              </div>
             </div>
-          </div>
-          <div class="usercomment">
-            "Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery."
-          </div>
-        </div>
-        <div class="comments">
-          <div class="details">
-            <img src="images/image-colton.jpg" class="profpic" alt="Anne Prof Pic" />
-            <div class="cgroup">
-              <p class="name">Anne Wallace</p>
-              <p class="status">Verified Buyer</p>
+            <div class="usercomment">
+              " Put an order with this company and can only praise them for the
+              very high standard. Will definitely use them again and recommend
+              them to everyone! "
             </div>
-          </div>
-          <div class="usercomment">
-            "Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone!"
           </div>
         </div>
       </div>
