--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <p class="status">Verified Buyer</p>
               </div>
             </div>
-            <div class="usercomment c1">
+            <div class="usercomment">
               " We needed the same printed design as the one we had ordered a
               week prior. Not only did they find the original order, but we also
               received it in time. Excellent! "
